k8s/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foaas
  labels:
    k8s-app: foaas
  namespace: default
  annotations:
    consul.hashicorp.com/service-name: "foaas"
    consul.hashicorp.com/service-tags: "foaas-svc,k8s-service"
    consul.hashicorp.com/service-port: "http"
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: foaas
  template:
    metadata:
      labels:
        k8s-app: foaas
    spec:
      containers:
      - name: foaas
        image: juliashub/foaas:1
        ports:
        - name: http
          protocol: TCP
          containerPort: 5000
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
