k8s/k8s_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foaas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /foaas(/|$)(.*)
          backend:
            serviceName: foaas-service
            servicePort: http
